kube/pihole/pihole-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-lb
  namespace: home
  annotations:
    metallb.universe.tf/allow-shared-ip: "pihole-dns"
    tailscale.com/expose: "true"
    tailscale.com/dns-enabled: "true"
    tailscale.com/dns-search-domains: "baker.local"
    tailscale.com/dns-nameservers: "10.43.80.73" # Replace with Pi-hole's 
spec:
  type: LoadBalancer
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
